# MahjongAI

./: .clang-format  .gitignore  .gitmodules  .isort.cfg  CMakeLists.txt  README.org  setup.cfg
data/: mahjong-judge
data/mj/: final_fans.pkl
data/mj/LIU/: 2017-01-01-3.txt  2017-01-01-6.txt
data/mj/MO/: 2017-01-01-9.txt
data/mj/PLAY/: 2017-01-01-0.txt  2017-01-01-2.txt  2017-01-01-4.txt  2017-01-01-5.txt  2017-01-01-7.txt  2017-01-01-8.txt
mahjong-game/: PyMahjong.cc  PyMahjong_Game.cc  PyMahjong_Game.h  PyMahjong_Player.cc  message.cc  message.h  player.cc  player.h
mahjong-python/: dump_final_fans.py  dump_replays.py  main.py  main_rl.py  main_rl_v2.py  main_rl_v3.py  run_bots.py
mahjong-python/IO/: replay_reader.py
mahjong-python/RL/: agent.py  arena.py  bots.py  random_agent.py
mahjong-python/configs/: baseline_cnn.config  baseline_cnn2.config  baseline_cnn3.config  baseline_cnn_lstm.config  rl_baseline_cnn.config  value_based.config
mahjong-python/framework/: common_modules.py  logging.py  session_manager.py  utils.py  vocab.py
mahjong-python/models/: utils.py
mahjong-python/models/baseline_cnn/: __init__.py  dataloader.py  model.py  trainer.py
mahjong-python/models/baseline_cnn2/: __init__.py  dataloader.py  model.py  trainer.py
mahjong-python/models/baseline_cnn3/: __init__.py  model.py  trainer.py
mahjong-python/models/baseline_cnn_lstm/: __init__.py  dataloader.py  model.py  trainer.py
mahjong-python/models/value_based/: dataloader.py  (+2 more)
mahjong-python/runner/: arena.py
mahjong-python/scripts/: release_model.py  summary_contest.py
